--- a/src/main/resources/messages/validation/ValidationMessages_tr.properties
+++ b/src/main/resources/messages/validation/ValidationMessages_tr.properties
@@ -7,3 +7,8 @@ registration_email_is_not_valid=L\u00FCtfen ge\u00E7erli bir email giriniz!
 # LOGIN VALIDATION
 login.username_not_empty=Kullan\u0131c\u0131 ad\u0131 bo\u00FE olamaz!
 login.password_not_empty=\u015Eifre bo\u015F olamaz!
+
+# BOOK VALIDATION
+book_title_not_empty=Kitap ismi  bo\u00FE olamaz!
+book_author_not_empty=Yazar bo\u00FE olamaz!
+book_stock_not_empty=Stok bo\u00FE olamaz!
